modification chemin et image

--- a/css/voyage1.css
+++ b/css/voyage1.css
@@ -4,7 +4,7 @@
 /*header*/
 header{
     width: auto;
-    background: url(/Users/GMNTh/OneDrive/Images/agriculture-g750cace34_1920.jpg);
+    background: url(../agriculture-g750cace34_1920.jpg);
     background-position: center;
     background-size: cover;
     margin: -10px;
